[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/sprites/button-2.png" type="Texture" id=1]
[ext_resource path="res://resources/font/Memogram.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/bgm/lv1/lost memories.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sprites/button-pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/illustrations/mainmenu/mainmenu-1.png" type="Texture" id=5]
[ext_resource path="res://assets/sfx/menu-select-button-182476.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/font/memogram.otf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/sprites/button-1.png" type="Texture" id=8]
[ext_resource path="res://assets/illustrations/mainmenu/mainmenu-3.png" type="Texture" id=9]
[ext_resource path="res://assets/illustrations/mainmenu/mainmenu-2.png" type="Texture" id=10]
[ext_resource path="res://menu/submenu/options.tscn" type="PackedScene" id=11]
[ext_resource path="res://menu/main_menu.gd" type="Script" id=12]
[ext_resource path="res://menu/transitions/transition_screen_1.tscn" type="PackedScene" id=13]
[ext_resource path="res://menu/submenu/credits.tscn" type="PackedScene" id=14]
[ext_resource path="res://resources/font/new_dynamicfont3.tres" type="DynamicFont" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 75
outline_color = Color( 0.839216, 0.839216, 0.839216, 1 )
font_data = ExtResource( 7 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 12 )
next_scene = "res://chapters/chapter_0/cutscenes/intro_cutscene.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.835294, 0.835294, 0.835294, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 794, 630 )
frames = SubResource( 1 )
playing = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Options" parent="CanvasLayer2" instance=ExtResource( 11 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -632.0
margin_top = -370.0
margin_right = 722.0
margin_bottom = 430.0

[node name="CanvasLayer3" type="CanvasLayer" parent="."]

[node name="Credits" parent="CanvasLayer3" instance=ExtResource( 14 )]
visible = false
margin_left = 150.0
margin_top = 20.0
margin_right = -120.0
margin_bottom = -260.0

[node name="CopyrightLabel" type="Label" parent="."]
margin_left = 1304.0
margin_top = 1033.0
margin_right = 2070.0
margin_bottom = 1129.0
custom_fonts/font = ExtResource( 15 )
text = "Â©2024, Bing Chilling, Team Bunglon"
align = 1

[node name="VersionLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 1033.0
margin_right = 622.0
margin_bottom = 1129.0
custom_fonts/font = ExtResource( 15 )
text = "Version 1.2"

[node name="TransitionScreen1" parent="." instance=ExtResource( 13 )]
visible = false

[node name="Label" type="Label" parent="."]
margin_left = 780.0
margin_top = 42.0
margin_right = 1892.0
margin_bottom = 577.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.54902, 0.54902, 0.54902, 0.588235 )
custom_constants/shadow_offset_x = 9
custom_constants/line_spacing = -84
custom_constants/shadow_offset_y = 3
custom_fonts/font = ExtResource( 2 )
text = "Something 
Left to Lose"
align = 1

[node name="PlayButton" type="TextureButton" parent="." groups=["button"]]
margin_left = 1088.0
margin_top = 460.0
margin_right = 1588.0
margin_bottom = 635.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="PlayButton"]
margin_right = 501.0
margin_bottom = 171.0
custom_colors/font_color_shadow = Color( 0.141176, 0.141176, 0.141176, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "Play"
align = 1
valign = 1

[node name="OptionsButton" type="TextureButton" parent="." groups=["button"]]
margin_left = 822.0
margin_top = 650.0
margin_right = 1322.0
margin_bottom = 825.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_right = NodePath("../CreditsButton")
focus_neighbour_bottom = NodePath("../QuitButton")
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true

[node name="Label2" type="Label" parent="OptionsButton"]
margin_top = 4.0
margin_right = 501.0
margin_bottom = 175.0
custom_colors/font_color_shadow = Color( 0.141176, 0.141176, 0.141176, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "Options"
align = 1
valign = 1

[node name="CreditsButton" type="TextureButton" parent="." groups=["button"]]
margin_left = 1342.0
margin_top = 650.0
margin_right = 1842.0
margin_bottom = 825.0
focus_neighbour_left = NodePath("../OptionsButton")
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../QuitButton")
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true

[node name="Label4" type="Label" parent="CreditsButton"]
margin_top = 4.0
margin_right = 501.0
margin_bottom = 175.0
custom_colors/font_color_shadow = Color( 0.141176, 0.141176, 0.141176, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "Credits"
align = 1
valign = 1

[node name="QuitButton" type="TextureButton" parent="." groups=["button"]]
margin_left = 1088.0
margin_top = 843.0
margin_right = 1588.0
margin_bottom = 1018.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../PlayButton")
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true

[node name="Label3" type="Label" parent="QuitButton"]
margin_right = 501.0
margin_bottom = 171.0
custom_colors/font_color_shadow = Color( 0.141176, 0.141176, 0.141176, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "Quit"
align = 1
valign = 1

[node name="SelectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="MainMenuBGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "BGM"

[node name="Tween" type="Tween" parent="."]

[connection signal="closedMenu" from="CanvasLayer2/Options" to="." method="_on_Options_closedMenu"]
[connection signal="closedMenu" from="CanvasLayer3/Credits" to="." method="_on_Credits_closedMenu"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="focus_entered" from="QuitButton" to="." method="_on_QuitButton_focus_entered"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
